# sp_ask_service_downtime_sms_alert_script

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  __version__  backup_sp.py  crontab-example  dev-requirements.txt  docker-compose.yaml  entrypoint.sh  log_setup.py  presence.db  pyproject.toml  pytest.ini  requirements.txt  sp_ask_service_availability_alert.py  test-requirements.txt  test_sms.db
coverage-output/coverage/: cov_odesi_coverage.xml
tests/: test_sp_ask_presence_alert.py
