[tool.poetry]
name = "sp_ask_service_availability_alert"
version = "0.1.3"
description = ""
authors = ["Guinsly Mondesir <guinslym@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.13.3"
requests = "^2.23.0"
environs = "^7.4.0"
twilio = "^6.39.0"
pytz = "^2020.1"
freezegun = "^0.3.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.2"
ptpython = "^3.0.2"
pytest-mock = "^3.1.0"
pytest-sugar = "^0.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
